Update the package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@truckersmp/api-types",
+  "name": "@truckersmp_official/api-types",
   "version": "1.0.0",
   "description": "Simple type definitions for the TruckersMP API.",
   "author": "TruckersMP",
