Update to match recent API changes
- Updated ban-related fields in line with recent changes
- Narrowed down fields in certain types for better IntelliSense
- Loosened param types for methods returning API routes to accept string here applicable

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "declaration": true,
-    "declarationMap": true
+    "declarationMap": true,
+    "strictNullChecks": true
   },
   "exclude": ["./node_modules"]
 }
