--- a/package.json
+++ b/package.json
@@ -21,9 +21,8 @@
     "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.57.0",
     "gen-esm-wrapper": "^1.1.3",
-    "npm-run-all": "^4.1.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^4.9.5"
+    "npm-run-all2": "^7.0.2",
+    "typescript": "^5.7.3"
   },
   "exports": {
     "./v2": {
